@@ -13,7 +13,6 @@
 - filters: more input filters ( get cabri to work somewhat, Dr.Genius
   perhaps ) and output filters...   
 - implement Circle by center and radius
-- printing... (cf. the kdeprint tutorial on printing.kde.org ...
 - move stillPix into movingMode, so the other modes won't suffer from
    its overhead...
 - add full undo support for everything the user might do: moving is
