@@ -6,6 +6,9 @@
       <Action name="file_save" />
       <Action name="file_save_as" />
       <Separator />
+      <Action name="file_print" />
+      <Action name="file_print_preview" />
+      <Separator />
       <Action name="file_export" />
       <Separator />
     </Menu>
