@@ -1,3 +1,7 @@
+2003-05-22  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>
+
+	* add simple printing support using the fantastic KDE-Print lib
+
 2003-05-21  Dominique Devriese  <dominique.devriese@student.kuleuven.ac.be>
 
 	* fix the full screen mode, to use the correct shortcut for
